add course materials

--- a/Heinen_ DSC540_Week1&2.ipynb
+++ b/Heinen_ DSC540_Week1&2.ipynb
@@ -557,9 +557,252 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d0db2d05-6dc6-41e4-a490-10080fe93ac6",
+   "metadata": {},
+   "source": [
+    "# a. The Data Wrangling Workshop: Activity 1.01 page 23\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc554266-ff09-4918-9d1d-46c9cb165b66",
+   "metadata": {},
+   "source": [
+    "## 1) Create a list of 100 random numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "0b51dc16-bdd6-4393-b933-a3459f768e70",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[62,\n",
+       " 79,\n",
+       " 57,\n",
+       " 96,\n",
+       " 11,\n",
+       " 84,\n",
+       " 67,\n",
+       " 98,\n",
+       " 79,\n",
+       " 87,\n",
+       " 34,\n",
+       " 61,\n",
+       " 41,\n",
+       " 69,\n",
+       " 26,\n",
+       " 48,\n",
+       " 42,\n",
+       " 80,\n",
+       " 51,\n",
+       " 43,\n",
+       " 39,\n",
+       " 29,\n",
+       " 86,\n",
+       " 44,\n",
+       " 5,\n",
+       " 89,\n",
+       " 12,\n",
+       " 70,\n",
+       " 20,\n",
+       " 18,\n",
+       " 52,\n",
+       " 99,\n",
+       " 8,\n",
+       " 87,\n",
+       " 17,\n",
+       " 51,\n",
+       " 77,\n",
+       " 13,\n",
+       " 55,\n",
+       " 88,\n",
+       " 0,\n",
+       " 65,\n",
+       " 55,\n",
+       " 4,\n",
+       " 99,\n",
+       " 38,\n",
+       " 48,\n",
+       " 54,\n",
+       " 29,\n",
+       " 42,\n",
+       " 59,\n",
+       " 27,\n",
+       " 29,\n",
+       " 56,\n",
+       " 58,\n",
+       " 38,\n",
+       " 60,\n",
+       " 22,\n",
+       " 93,\n",
+       " 100,\n",
+       " 41,\n",
+       " 8,\n",
+       " 20,\n",
+       " 86,\n",
+       " 32,\n",
+       " 25,\n",
+       " 36,\n",
+       " 89,\n",
+       " 43,\n",
+       " 71,\n",
+       " 77,\n",
+       " 50,\n",
+       " 10,\n",
+       " 81,\n",
+       " 63,\n",
+       " 69,\n",
+       " 23,\n",
+       " 32,\n",
+       " 99,\n",
+       " 77,\n",
+       " 35,\n",
+       " 91,\n",
+       " 71,\n",
+       " 37,\n",
+       " 52,\n",
+       " 16,\n",
+       " 74,\n",
+       " 79,\n",
+       " 82,\n",
+       " 94,\n",
+       " 73,\n",
+       " 91,\n",
+       " 22,\n",
+       " 11,\n",
+       " 94,\n",
+       " 88,\n",
+       " 47,\n",
+       " 12,\n",
+       " 3,\n",
+       " 46]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create random numbers list, use the dandom integer function to generate random numbers.\n",
+    "# itterate 100 times. \n",
+    "rand_num_list = [random.randint(0, 100) for x in range(0, 100)]\n",
+    "\n",
+    "# Display the list \n",
+    "rand_num_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5afb05a1-0d6b-4a4d-8e2e-f5b4df1230b3",
+   "metadata": {},
+   "source": [
+    "## 2) Create a new list from the random list, with numbers that are divisable by 3. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "382b0cd7-2e89-4fac-9c6f-1fd6c5998c8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[57,\n",
+       " 96,\n",
+       " 84,\n",
+       " 87,\n",
+       " 69,\n",
+       " 48,\n",
+       " 42,\n",
+       " 51,\n",
+       " 39,\n",
+       " 12,\n",
+       " 18,\n",
+       " 99,\n",
+       " 87,\n",
+       " 51,\n",
+       " 0,\n",
+       " 99,\n",
+       " 48,\n",
+       " 54,\n",
+       " 42,\n",
+       " 27,\n",
+       " 60,\n",
+       " 93,\n",
+       " 36,\n",
+       " 81,\n",
+       " 63,\n",
+       " 69,\n",
+       " 99,\n",
+       " 12,\n",
+       " 3]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Itterate over every number and check the remainder. \n",
+    "# if the remainder is 0 add it to the list. \n",
+    "# note: % is the modulo opperator that returns the remainder of division. \n",
+    "list_div_3 = [a for a in rand_num_list if a % 3 == 0]\n",
+    "\n",
+    "# display list\n",
+    "list_div_3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df05c002-d196-4458-a757-8233917d04e2",
+   "metadata": {},
+   "source": [
+    "## 3) Calculate the length of each list and store difference in a new variable. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "1dae5283-2361-48cf-af46-bdf375a52d66",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "71"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calc rand_num_list length use length finction. \n",
+    "len_rand_num_list = len(rand_num_list)\n",
+    "\n",
+    "# Use len function calculate div 3 list length. \n",
+    "len_list_div_3 = len(list_div_3)\n",
+    "\n",
+    "# Calc difference. \n",
+    "dif_list = len_rand_num_list - len_list_div_3\n",
+    "\n",
+    "#display\n",
+    "dif_list\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8354c1b0-24f3-4419-83b1-24e2daffd2a3",
+   "id": "849e9cef-d6f8-42f5-8e76-00fe06acc0bf",
    "metadata": {},
    "outputs": [],
    "source": []
