--- a/Heinen_ DSC540_Week1&2.ipynb
+++ b/Heinen_ DSC540_Week1&2.ipynb
@@ -20,7 +20,7 @@
    "id": "f227e7be-2532-410b-8b27-48cf39a08a94",
    "metadata": {},
    "source": [
-    "2) Create a Jupyter notebook where you create a list, iterate over the list and sort your results, generate random numbers, add to the list, and then print your results."
+    "# 2) Create a Jupyter notebook where you create a list, iterate over the list and sort your results, generate random numbers, add to the list, and then print your results."
    ]
   },
   {
@@ -140,7 +140,7 @@
    "id": "44177430-2ac3-430f-80af-ee903544cd04",
    "metadata": {},
    "source": [
-    "3. Create a line chart with Matplotlib and the following data file.\n",
+    "# 3. Create a line chart with Matplotlib and the following data file.\n",
     "\n",
     "        a. Data file: world-population.xlsm\n",
     "\n",
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 56,
    "id": "1dae5283-2361-48cf-af46-bdf375a52d66",
    "metadata": {},
    "outputs": [
@@ -780,7 +780,7 @@
        "71"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,16 +793,118 @@
     "len_list_div_3 = len(list_div_3)\n",
     "\n",
     "# Calc difference. \n",
-    "dif_list = len_rand_num_list - len_list_div_3\n",
+    "dif_num = len_rand_num_list - len_list_div_3\n",
     "\n",
     "#display\n",
-    "dif_list\n"
+    "dif_num\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd769809-5489-4f75-979c-9170af8c086a",
+   "metadata": {},
+   "source": [
+    " ## 4) Using a loop, perform steps 1, 2, and 3 and find the difference variable 10 times. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "0cbbd4b2-46f5-4a28-b2a7-bcd108304646",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[66, 69, 65, 62, 69, 66, 67, 65, 65, 67]"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Define number of itterations\n",
+    "num_of_itters = 10\n",
+    "\n",
+    "# innitialise difference list\n",
+    "dif_list = []\n",
+    "\n",
+    "# Loop through the process num_of_itters times\n",
+    "for i in range(0, num_of_itters):\n",
+    "    # Create random numbers list, use the dandom integer function to generate random numbers.\n",
+    "    # itterate 100 times. \n",
+    "    rand_num_list = [random.randint(0, 100) for x in range(0, 100)]\n",
+    "    \n",
+    "    # Itterate over every number and check the remainder. \n",
+    "    # if the remainder is 0 add it to the list. \n",
+    "    # note: % is the modulo opperator that returns the remainder of division. \n",
+    "    list_div_3 = [a for a in rand_num_list if a % 3 == 0]\n",
+    "    \n",
+    "    # Calc rand_num_list length use length finction. \n",
+    "    len_rand_num_list = len(rand_num_list)\n",
+    "\n",
+    "    # Use len function calculate div 3 list length. \n",
+    "    len_list_div_3 = len(list_div_3)\n",
+    "\n",
+    "    # Calc difference. \n",
+    "    dif_num = len_rand_num_list - len_list_div_3\n",
+    "\n",
+    "    # add calculated difference number to the difference list \n",
+    "    dif_list.append(dif_num)\n",
+    "\n",
+    "# Display dif_list\n",
+    "dif_list\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "245d7753-4f3e-4fd4-8bd0-47653a54470c",
+   "metadata": {},
+   "source": [
+    "## 5) Find the arithmatic mean of the 10 difference values. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "fe4f2c57-887d-4080-85d0-e225a2512d3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Average of the difference list is:  66.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import packages. \n",
+    "import statistics\n",
+    "\n",
+    "# Calculate average \n",
+    "list_avg = statistics.mean(dif_list)\n",
+    "\n",
+    "# Print result. \n",
+    "print('The Average of the difference list is: ', list_avg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a5326f1-cdf0-4ec5-bef2-aa2533e35028",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# b. The Data Wrangling Workshop: Activity 1.02 page 43"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "849e9cef-d6f8-42f5-8e76-00fe06acc0bf",
+   "id": "50bd35bf-7c70-4b28-a229-0920dc6b362a",
    "metadata": {},
    "outputs": [],
    "source": []
