--- a/Heinen_ DSC540_Week1&2.ipynb
+++ b/Heinen_ DSC540_Week1&2.ipynb
@@ -902,9 +902,114 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3ab836dc-7a5d-4505-85d6-2c81c8769834",
+   "metadata": {},
+   "source": [
+    "Open a new Jupyter Notebook and create a string called multiline_text and copy the text present in the first chapter of Pride and Prejudice. Use Ctrl + A to select the entire text and then Ctrl + C to copy it and paste the text you just copied into it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "bbe4bd97-bb03-4121-821f-d839bd143506",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create variable to hold pride and prejduce text. \n",
+    "\n",
+    "multiline_text= \"\"\"It is a truth universally acknowledged, that a single man in possession of a good fortune, must be in want of a wife.\n",
+    "\n",
+    "However little known the feelings or views of such a man may be on his first entering a neighbourhood, this truth is so well fixed in the minds of the surrounding families, that he is considered the rightful property of some one or other of their daughters.\n",
+    "\n",
+    "\"My dear Mr. Bennet,\" said his lady to him one day, \"have you heard that Netherfield Park is let at last?\"\n",
+    "\n",
+    "Mr. Bennet replied that he had not.\n",
+    "\n",
+    "\"But it is,\" returned she; \"for Mrs. Long has just been here, and she told me all about it.\"\n",
+    "\n",
+    "Mr. Bennet made no answer.\n",
+    "\n",
+    "\"Do you not want to know who has taken it?\" cried his wife impatiently.\n",
+    "\n",
+    "\"You want to tell me, and I have no objection to hearing it.\"\n",
+    "\n",
+    "This was invitation enough.\n",
+    "\n",
+    "\"Why, my dear, you must know, Mrs. Long says that Netherfield is taken by a young man of large fortune from the north of England; that he came down on Monday in a chaise and four to see the place, and was so much delighted with it, that he agreed with Mr. Morris immediately; that he is to take possession before Michaelmas, and some of his servants are to be in the house by the end of next week.\"\n",
+    "\n",
+    "\"What is his name?\"\"\"\n",
+    "\n",
+    "# validate variable type\n",
+    "type(multiline_text)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "066bd69d-0498-4728-8352-a8f26cf4378d",
+   "metadata": {},
+   "source": [
+    "## Remove new lines using string methods."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "69c72861-c26e-4232-b789-e2c151db7387",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'It is a truth universally acknowledged, that a single man in possession of a good fortune, must be in want of a wife.However little known the feelings or views of such a man may be on his first entering a neighbourhood, this truth is so well fixed in the minds of the surrounding families, that he is considered the rightful property of some one or other of their daughters.\"My dear Mr. Bennet,\" said his lady to him one day, \"have you heard that Netherfield Park is let at last?\"Mr. Bennet replied that he had not.\"But it is,\" returned she; \"for Mrs. Long has just been here, and she told me all about it.\"Mr. Bennet made no answer.\"Do you not want to know who has taken it?\" cried his wife impatiently.\"You want to tell me, and I have no objection to hearing it.\"This was invitation enough.\"Why, my dear, you must know, Mrs. Long says that Netherfield is taken by a young man of large fortune from the north of England; that he came down on Monday in a chaise and four to see the place, and was so much delighted with it, that he agreed with Mr. Morris immediately; that he is to take possession before Michaelmas, and some of his servants are to be in the house by the end of next week.\"\"What is his name?'"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use string methods to remove all the new lines in the text variable. \n",
+    "\n",
+    "# Use the replace method to remove all new line \\n, replace with nothing charachter\n",
+    "multiline_text = multiline_text.replace('\\n', \"\")\n",
+    "\n",
+    "#validate results\n",
+    "multiline_text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68f4e9c1-057c-409b-a114-2c97f857dd8e",
+   "metadata": {},
+   "source": [
+    "## Get all of the unique words and their occurances from the string"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf729041-e5fa-47f5-a16e-464a1d2c1a31",
+   "metadata": {},
+   "source": [
+    "## repeat the steps to find all unique words and occurance without considering case sensitivity. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50bd35bf-7c70-4b28-a229-0920dc6b362a",
+   "id": "9351a44e-cc69-4f45-9b32-379f5c7cfb6a",
    "metadata": {},
    "outputs": [],
    "source": []
