--- a/Heinen_ DSC540_Week1&2.ipynb
+++ b/Heinen_ DSC540_Week1&2.ipynb
@@ -1508,9 +1508,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7e568f94-a115-40ed-9ce1-8ca54561178a",
+   "metadata": {},
+   "source": [
+    "# c. The Data Wrangling Workshop: Activity 2.01 page 70"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da162b0b-fab5-421f-92ab-ebbaedffa7ff",
+   "metadata": {},
+   "source": [
+    "## 1 Look up the definition of permutations and dropwhile from itertools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b606342-5303-473c-a50a-898d352614c0",
+   "metadata": {},
+   "source": [
+    "## 2 write an expression to generate all the possible three diget numbers, using 0, 1, and 2. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec01e475-5e91-4d9b-848b-4db018068724",
+   "metadata": {},
+   "source": [
+    "## 3 loop over the itterator expression. print each element returned by itterator. use assert and isinstance to make sure that the elements are tupple type. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70100cf6-be54-437f-815a-6b2462ea3407",
+   "metadata": {},
+   "source": [
+    "## 4 Write the loop again using dropwhile, with a lambda expression to drop any leading zeros from the tuples. As an example, (0, 1, 2) will become [0, 2]. also cast the output of dropwhile to a list. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34df0a44-f413-429d-99ff-2bc1694af0bc",
+   "metadata": {},
+   "source": [
+    "## 5 Check the actual type that dropwhile returns. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f661c671-272d-41b9-9102-2becbe8ca14a",
+   "id": "1e05b6b3-7337-430b-b1de-9d8e5e9c3c6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 6 Combine preceding code into one block. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c3c190d-49f9-4549-908b-90a816118f4b",
+   "metadata": {},
+   "source": [
+    "# d. The Data Wrangling Workshop: Activity 2.02 page 81"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f58711fc-66e0-42a6-b28a-3d7e4fa2375c",
    "metadata": {},
    "outputs": [],
    "source": []
