--- a/Heinen_ DSC540_Week1&2.ipynb
+++ b/Heinen_ DSC540_Week1&2.ipynb
@@ -1346,152 +1346,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 120,
-   "id": "46f108d9-e189-4336-9ef2-4e302ffc420d",
+   "cell_type": "markdown",
+   "id": "3d578c79-ecaf-49fe-92e0-b1790e2d2092",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'it': 6,\n",
-       " 'is': 8,\n",
-       " 'a': 8,\n",
-       " 'truth': 2,\n",
-       " 'universally': 1,\n",
-       " 'acknowledged': 1,\n",
-       " 'that': 8,\n",
-       " 'single': 1,\n",
-       " 'man': 3,\n",
-       " 'in': 5,\n",
-       " 'possession': 2,\n",
-       " 'of': 10,\n",
-       " 'good': 1,\n",
-       " 'fortune': 2,\n",
-       " 'must': 2,\n",
-       " 'be': 3,\n",
-       " 'want': 3,\n",
-       " 'wife': 2,\n",
-       " 'however': 1,\n",
-       " 'little': 1,\n",
-       " 'known': 1,\n",
-       " 'the': 8,\n",
-       " 'feelings': 1,\n",
-       " 'or': 2,\n",
-       " 'views': 1,\n",
-       " 'such': 1,\n",
-       " 'may': 1,\n",
-       " 'on': 2,\n",
-       " 'his': 5,\n",
-       " 'first': 1,\n",
-       " 'entering': 1,\n",
-       " 'neighbourhood': 1,\n",
-       " 'this': 2,\n",
-       " 'so': 2,\n",
-       " 'well': 1,\n",
-       " 'fixed': 1,\n",
-       " 'minds': 1,\n",
-       " 'surrounding': 1,\n",
-       " 'families': 1,\n",
-       " 'he': 5,\n",
-       " 'considered': 1,\n",
-       " 'rightful': 1,\n",
-       " 'property': 1,\n",
-       " 'some': 2,\n",
-       " 'one': 2,\n",
-       " 'other': 1,\n",
-       " 'their': 1,\n",
-       " 'daughters': 1,\n",
-       " 'my': 2,\n",
-       " 'dear': 2,\n",
-       " 'mr': 4,\n",
-       " 'bennet': 3,\n",
-       " 'said': 1,\n",
-       " 'lady': 1,\n",
-       " 'to': 7,\n",
-       " 'him': 1,\n",
-       " 'day': 1,\n",
-       " 'have': 2,\n",
-       " 'you': 4,\n",
-       " 'heard': 1,\n",
-       " 'netherfield': 2,\n",
-       " 'park': 1,\n",
-       " 'let': 1,\n",
-       " 'at': 1,\n",
-       " 'last': 1,\n",
-       " 'replied': 1,\n",
-       " 'had': 1,\n",
-       " 'not': 2,\n",
-       " 'but': 1,\n",
-       " 'returned': 1,\n",
-       " 'she': 2,\n",
-       " 'for': 1,\n",
-       " 'mrs': 2,\n",
-       " 'long': 2,\n",
-       " 'has': 2,\n",
-       " 'just': 1,\n",
-       " 'been': 1,\n",
-       " 'here': 1,\n",
-       " 'and': 5,\n",
-       " 'told': 1,\n",
-       " 'me': 2,\n",
-       " 'all': 1,\n",
-       " 'about': 1,\n",
-       " 'made': 1,\n",
-       " 'no': 2,\n",
-       " 'answer': 1,\n",
-       " 'do': 1,\n",
-       " 'know': 2,\n",
-       " 'who': 1,\n",
-       " 'taken': 2,\n",
-       " 'cried': 1,\n",
-       " 'impatiently': 1,\n",
-       " 'tell': 1,\n",
-       " 'i': 1,\n",
-       " 'objection': 1,\n",
-       " 'hearing': 1,\n",
-       " 'was': 2,\n",
-       " 'invitation': 1,\n",
-       " 'enough': 1,\n",
-       " 'why': 1,\n",
-       " 'says': 1,\n",
-       " 'by': 2,\n",
-       " 'young': 1,\n",
-       " 'large': 1,\n",
-       " 'from': 1,\n",
-       " 'north': 1,\n",
-       " 'england': 1,\n",
-       " 'came': 1,\n",
-       " 'down': 1,\n",
-       " 'monday': 1,\n",
-       " 'chaise': 1,\n",
-       " 'four': 1,\n",
-       " 'see': 1,\n",
-       " 'place': 1,\n",
-       " 'much': 1,\n",
-       " 'delighted': 1,\n",
-       " 'with': 2,\n",
-       " 'agreed': 1,\n",
-       " 'morris': 1,\n",
-       " 'immediately': 1,\n",
-       " 'take': 1,\n",
-       " 'before': 1,\n",
-       " 'michaelmas': 1,\n",
-       " 'servants': 1,\n",
-       " 'are': 1,\n",
-       " 'house': 1,\n",
-       " 'end': 1,\n",
-       " 'next': 1,\n",
-       " 'week': 1,\n",
-       " 'what': 1,\n",
-       " 'name': 1}"
-      ]
-     },
-     "execution_count": 120,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "# Assign a value to each key in the dictionary. \n",
     "# loop through the list of words and assign a count to each key. \n",
@@ -1525,10 +1382,96 @@
   },
   {
    "cell_type": "markdown",
+   "id": "24b1feed-8a08-4b43-9eb3-5feacacc9bc5",
+   "metadata": {},
+   "source": [
+    "Permutation: itter tools permutation itterates through a string, list etc and give all possible orders of the elements involved. \n",
+    "\n",
+    "dropwhile: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "ada94b8d-6cd8-4857-b838-078d236d6c32",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mInit signature:\u001b[0m \u001b[0mpermutations\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m     \n",
+       "Return successive r-length permutations of elements in the iterable.\n",
+       "\n",
+       "permutations(range(3), 2) --> (0,1), (0,2), (1,0), (1,2), (2,0), (2,1)\n",
+       "\u001b[0;31mType:\u001b[0m           type\n",
+       "\u001b[0;31mSubclasses:\u001b[0m     "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# import packages. \n",
+    "from itertools import permutations, dropwhile\n",
+    "# call help on permutation function. \n",
+    "permutations?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "5a62fa17-f096-4f7b-ae3d-f570c7ecae78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mInit signature:\u001b[0m \u001b[0mdropwhile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredicate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miterable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m/\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m     \n",
+       "Drop items from the iterable while predicate(item) is true.\n",
+       "\n",
+       "Afterwards, return every element until the iterable is exhausted.\n",
+       "\u001b[0;31mType:\u001b[0m           type\n",
+       "\u001b[0;31mSubclasses:\u001b[0m     "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# call help on dropwhile\n",
+    "dropwhile?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0b606342-5303-473c-a50a-898d352614c0",
    "metadata": {},
    "source": [
     "## 2 write an expression to generate all the possible three diget numbers, using 0, 1, and 2. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "bf42045e-a2ba-47c2-bf43-473dd92c8121",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<itertools.permutations object at 0x16e676570>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Use permutations function to generate all possible combinations. \n",
+    "# note range 3 denotes the int 0, 1, 2 \n",
+    "permutations(range(3))\n"
    ]
   },
   {
@@ -1540,11 +1483,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "2b17d486-9429-4e32-9bea-b62bb30220d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 1, 2)\n",
+      "(0, 2, 1)\n",
+      "(1, 0, 2)\n",
+      "(1, 2, 0)\n",
+      "(2, 0, 1)\n",
+      "(2, 1, 0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Loop through each number tupple created in the permutation above. \n",
+    "for number_tuple in permutations(range(3)):\n",
+    "    # print each resulting combination. \n",
+    "    print(number_tuple)\n",
+    "    # use assert to ensure that we are casting each instance as a tupple. \n",
+    "    assert isinstance(number_tuple, tuple)  \n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "70100cf6-be54-437f-815a-6b2462ea3407",
    "metadata": {},
    "source": [
     "## 4 Write the loop again using dropwhile, with a lambda expression to drop any leading zeros from the tuples. As an example, (0, 1, 2) will become [0, 2]. also cast the output of dropwhile to a list. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "c41dc367-7f5a-4f7c-ac2e-6d49abe1ace6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2]\n",
+      "[2, 1]\n",
+      "[1, 0, 2]\n",
+      "[1, 2, 0]\n",
+      "[2, 0, 1]\n",
+      "[2, 1, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# loop through each tupple in the permutation. \n",
+    "for number_tuple in permutations(range(3)):\n",
+    "    # print each resulting combo, cast as a list\n",
+    "    #use dropwhile to drop any leading zeros from each number tupple. \n",
+    "    print(list(dropwhile(lambda x: x <= 0, number_tuple)))  \n"
    ]
   },
   {
@@ -1557,12 +1555,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1e05b6b3-7337-430b-b1de-9d8e5e9c3c6c",
+   "execution_count": 145,
+   "id": "ebce58c9-6618-4c01-aa3b-4e8c87e076b5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2]\n",
+      "<class 'list'>\n",
+      "[2, 1]\n",
+      "<class 'list'>\n",
+      "[1, 0, 2]\n",
+      "<class 'list'>\n",
+      "[1, 2, 0]\n",
+      "<class 'list'>\n",
+      "[2, 0, 1]\n",
+      "<class 'list'>\n",
+      "[2, 1, 0]\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
    "source": [
-    "## 6 Combine preceding code into one block. "
+    "# validate that the code above from the dropwhile function returns a list. \n",
+    "\n",
+    "# loop through each tupple in the permutation. \n",
+    "for number_tuple in permutations(range(3)):\n",
+    "    # Assign each tupple to result_ tupple, cast as a list\n",
+    "    #use dropwhile to drop any leading zeros from each number tupple. \n",
+    "    result_tupple= list(dropwhile(lambda x: x <= 0, number_tuple))\n",
+    "    print(result_tupple)  \n",
+    "    # Print the type \n",
+    "    print(type(result_tupple))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03f5b73f-da60-4461-8f69-42de35575a00",
+   "metadata": {},
+   "source": [
+    "## 6 Combine preceding code into one block. Pass the list from the dropwhile function and return the whole number contained by the list. Ensure that the returned value is indeed a number. Use the stack function to generate the number by by readin the individual digits from the stack. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "id": "44ba1bdb-f2ee-47ad-ac94-1b63b82ad6d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.0\n",
+      "<class 'int'>\n",
+      "21.0\n",
+      "<class 'int'>\n",
+      "102.0\n",
+      "<class 'int'>\n",
+      "120.0\n",
+      "<class 'int'>\n",
+      "201.0\n",
+      "<class 'int'>\n",
+      "210.0\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import packages. \n",
+    "import math\n",
+    "\n",
+    "# Define Convert to number function. \n",
+    "# number_stack is the resulting list from our dropwhile function above.\n",
+    "def convert_to_number(number_stack):\n",
+    "\n",
+    "    # Initialise the final number to be returned. \n",
+    "    final_number = 0\n",
+    "\n",
+    "    # Itterate through every didget in the number_stack list. \n",
+    "    for i in range(0, len(number_stack)):\n",
+    "        # append the final number \n",
+    "        # number_stack,pop() return last number in the list. \n",
+    "        #(math.pow(10, i))) this raises 10 to the power of i (didget place in the stack). \n",
+    "        final_number += (number_stack.pop() * (math.pow(10, i)))\n",
+    "    # return the number. \n",
+    "    return final_number\n",
+    "\n",
+    "# Loop through every tupple created by the permutation. \n",
+    "for number_tuple in permutations(range(3)):\n",
+    "    # Define numberstack as the list created by the dropwhile function. \n",
+    "    number_stack = list(dropwhile(lambda x: x <= 0, number_tuple))\n",
+    "    # Call convert_to_number, passing the number_stack variable. \n",
+    "    \n",
+    "    # Print the resulting number. \n",
+    "    print(convert_to_number(number_stack)) \n",
+    "\n",
+    "    # Prind the type of each number (verify). \n",
+    "    print(type(convert_to_number(number_stack)))\n"
    ]
   },
   {
@@ -1570,13 +1662,104 @@
    "id": "3c3c190d-49f9-4549-908b-90a816118f4b",
    "metadata": {},
    "source": [
-    "# d. The Data Wrangling Workshop: Activity 2.02 page 81"
+    "# d. The Data Wrangling Workshop: Activity 2.02 page 81\n",
+    "\n",
+    "## create your on CSV reader and parser. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "id": "f58711fc-66e0-42a6-b28a-3d7e4fa2375c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import zip_longest from itertools. \n",
+    "from itertools import zip_longest "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "id": "ca370916-9f90-4dfb-80c7-9e86c0c3ce07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# build a function to return a dictionary from a line read in the CSV file. \n",
+    "def return_dict_from_csv_line(header, line):\n",
+    "    # Zip them\n",
+    "    zipped_line = zip_longest(header, line, fillvalue=None)\n",
+    "    # Use dict comprehension to generate the final dict\n",
+    "    ret_dict = {kv[0]: kv[1] for kv in zipped_line}\n",
+    "    return ret_dict  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "id": "9fc5c851-8aab-46a0-8a91-93efb405de23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Region': 'Central America and the Caribbean', 'Country': 'Antigua and Barbuda ', 'Item Type': 'Baby Food', 'Sales Channel': 'Online', 'Order Priority': 'M', 'Order Date': '12/20/2013', 'Order ID': '957081544', 'Ship Date': '1/11/2014', 'Units Sold': '552', 'Unit Price': '255.28', 'Unit Cost': '159.42', 'Total Revenue': '140914.56', 'Total Cost': '87999.84', 'Total Profit': '52914.72'}\n",
+      "{'Region': 'Central America and the Caribbean', 'Country': 'Panama', 'Item Type': 'Snacks', 'Sales Channel': 'Offline', 'Order Priority': 'C', 'Order Date': '7/5/2010', 'Order ID': '301644504', 'Ship Date': '7/26/2010', 'Units Sold': '2167', 'Unit Price': '152.58', 'Unit Cost': '97.44', 'Total Revenue': '330640.86', 'Total Cost': '211152.48', 'Total Profit': '119488.38'}\n",
+      "{'Region': 'Europe', 'Country': 'Czech Republic', 'Item Type': 'Beverages', 'Sales Channel': 'Offline', 'Order Priority': 'C', 'Order Date': '9/12/2011', 'Order ID': '478051030', 'Ship Date': '9/29/2011', 'Units Sold': '4778', 'Unit Price': '47.45', 'Unit Cost': '31.79', 'Total Revenue': '226716.10', 'Total Cost': '151892.62', 'Total Profit': '74823.48'}\n",
+      "{'Region': 'Asia', 'Country': 'North Korea', 'Item Type': 'Cereal', 'Sales Channel': 'Offline', 'Order Priority': 'L', 'Order Date': '5/13/2010', 'Order ID': '892599952', 'Ship Date': '6/15/2010', 'Units Sold': '9016', 'Unit Price': '205.70', 'Unit Cost': '117.11', 'Total Revenue': '1854591.20', 'Total Cost': '1055863.76', 'Total Profit': '798727.44'}\n",
+      "{'Region': 'Asia', 'Country': 'Sri Lanka', 'Item Type': 'Snacks', 'Sales Channel': 'Offline', 'Order Priority': 'C', 'Order Date': '7/20/2015', 'Order ID': '571902596', 'Ship Date': '7/27/2015', 'Units Sold': '7542', 'Unit Price': '152.58', 'Unit Cost': '97.44', 'Total Revenue': '1150758.36', 'Total Cost': '734892.48', 'Total Profit': '415865.88'}\n",
+      "{'Region': 'Middle East and North Africa', 'Country': 'Morocco', 'Item Type': 'Personal Care', 'Sales Channel': 'Offline', 'Order Priority': 'L', 'Order Date': '11/8/2010', 'Order ID': '412882792', 'Ship Date': '11/22/2010', 'Units Sold': '48', 'Unit Price': '81.73', 'Unit Cost': '56.67', 'Total Revenue': '3923.04', 'Total Cost': '2720.16', 'Total Profit': '1202.88'}\n",
+      "{'Region': 'Australia and Oceania', 'Country': 'Federated States of Micronesia', 'Item Type': 'Clothes', 'Sales Channel': 'Offline', 'Order Priority': 'H', 'Order Date': '3/28/2011', 'Order ID': '932776868', 'Ship Date': '5/10/2011', 'Units Sold': '8258', 'Unit Price': '109.28', 'Unit Cost': '35.84', 'Total Revenue': '902434.24', 'Total Cost': '295966.72', 'Total Profit': '606467.52'}\n",
+      "{'Region': 'Europe', 'Country': 'Bosnia and Herzegovina', 'Item Type': 'Clothes', 'Sales Channel': 'Online', 'Order Priority': 'M', 'Order Date': '10/14/2013', 'Order ID': '919133651', 'Ship Date': '11/4/2013', 'Units Sold': '927', 'Unit Price': '109.28', 'Unit Cost': '35.84', 'Total Revenue': '101302.56', 'Total Cost': '33223.68', 'Total Profit': '68078.88'}\n",
+      "{'Region': 'Middle East and North Africa', 'Country': 'Afghanistan', 'Item Type': 'Clothes', 'Sales Channel': 'Offline', 'Order Priority': 'M', 'Order Date': '8/27/2016', 'Order ID': '579814469', 'Ship Date': '10/5/2016', 'Units Sold': '8841', 'Unit Price': '109.28', 'Unit Cost': '35.84', 'Total Revenue': '966144.48', 'Total Cost': '316861.44', 'Total Profit': '649283.04'}\n",
+      "{'Region': 'Sub-Saharan Africa', 'Country': 'Ethiopia', 'Item Type': 'Baby Food', 'Sales Channel': 'Online', 'Order Priority': 'M', 'Order Date': '4/13/2015', 'Order ID': '192993152', 'Ship Date': '5/7/2015', 'Units Sold': '9817', 'Unit Price': '255.28', 'Unit Cost': '159.42', 'Total Revenue': '2506083.76', 'Total Cost': '1565026.14', 'Total Profit': '941057.62'}\n",
+      "{'Region': 'Middle East and North Africa', 'Country': 'Turkey', 'Item Type': 'Office Supplies', 'Sales Channel': 'Offline', 'Order Priority': 'C', 'Order Date': '9/25/2013', 'Order ID': '557156026', 'Ship Date': '10/15/2013', 'Units Sold': '3704', 'Unit Price': '651.21', 'Unit Cost': '524.96', 'Total Revenue': '2412081.84', 'Total Cost': '1944451.84', 'Total Profit': '467630.00'}\n",
+      "{'Region': 'Middle East and North Africa', 'Country': 'Oman', 'Item Type': 'Cosmetics', 'Sales Channel': 'Online', 'Order Priority': 'M', 'Order Date': '5/12/2013', 'Order ID': '741101920', 'Ship Date': '5/17/2013', 'Units Sold': '7382', 'Unit Price': '437.20', 'Unit Cost': '263.33', 'Total Revenue': '3227410.40', 'Total Cost': '1943902.06', 'Total Profit': '1283508.34'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"sales_record.csv\", \"r\") as fd:\n",
+    "    first_line = fd.readline()\n",
+    "    header = first_line.replace(\"\\n\", \"\").split(\",\")\n",
+    "    for i, line in enumerate(fd):\n",
+    "        # Here we loop over the first 10 lines in order to not to make the output too big\n",
+    "        line = line.replace(\"\\n\", \"\").split(\",\")\n",
+    "        d = return_dict_from_csv_line(header, line)\n",
+    "        print(d)\n",
+    "        if i > 10:\n",
+    "            break"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f58711fc-66e0-42a6-b28a-3d7e4fa2375c",
+   "id": "a84d5836-0c9f-4e85-b44e-8025c94e6336",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6d43248-b006-47e6-a29b-cd963f42a076",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16a9ef4b-01e2-4036-9b97-43959954050b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f1a1211-cb46-4399-b0fa-398ec42ec007",
    "metadata": {},
    "outputs": [],
    "source": []
